Adiing preview feature build support